--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "playground-next",
+  "name": "testea",
+  "description": " DataArts-Studio project",
   "packageManager": "pnpm@10.21.0",
   "version": "0.1.0",
   "private": true,
@@ -33,12 +34,14 @@
     "clsx": "^2.1.1",
     "drizzle-kit": "^0.31.7",
     "drizzle-orm": "^0.44.7",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.554.0",
-    "next": "16.0.3",
+    "next": "16.0.7",
     "postgres": "^3.4.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12",
@@ -62,8 +65,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.22",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "eslint-config-prettier": "^10.1.8",
